- remove redundant fields - remove unused imports, variables - comments consistency - add finalUrl